--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#004990">
     
     <link rel="preconnect" href="https://wa.me">
-    <link rel="stylesheet" href="css/styles.css?v=1.5.7">
+    <link rel="stylesheet" href="css/styles.css?v=1.5.8">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
@@ -123,7 +123,7 @@
         <!-- Phone Mockup - Normal Image -->
        <div class="phone-wrapper">
   
-  <div class="phone-screen">
+  <div id="phoneScreenSlider" class="phone-screen">
       <img src="assets/one.webp" class="phone-slide active" alt="Phone Frame" loading="lazy">
       <img src="assets/two.webp" class="phone-slide" alt="Phone Frame" loading="lazy">
       <img src="assets/three.webp" class="phone-slide" alt="Phone Frame" loading="lazy">
