--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#004990">
     
     <link rel="preconnect" href="https://wa.me">
-    <link rel="stylesheet" href="css/styles.css?v=1.6.1">
+    <link rel="stylesheet" href="css/styles.css?v=1.6.2">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
@@ -606,7 +606,7 @@
 
             <div class="form-group">
                 <label class="form-label">Nomor Plat Kendaraan <span class="required">*</span></label>
-                <input type="text" class="form-input" name="nopol" id="nopolInput" placeholder="B 1234 XYZ" style="text-transform: uppercase;" required>
+                <input type="text" class="form-input" name="nopol" id="nopolInput" maxlength="12" autocomplete="off" placeholder="B 1234 XYZ" style="text-transform: uppercase;" required>
             </div>
 
             <button type="button" class="btn-next">Lanjut</button>
