--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#004990">
     
     <link rel="preconnect" href="https://wa.me">
-    <link rel="stylesheet" href="css/styles.css?v=1.6.6">
+    <link rel="stylesheet" href="css/styles.css?v=1.6.7">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
@@ -36,6 +36,24 @@
   "areaServed": "Indonesia"
 }
 </script>
+
+    <!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '745788421683082');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=745788421683082&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
 
 </head>
 <body>
