--- a/quick-form.html
+++ b/quick-form.html
@@ -29,7 +29,7 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-            background: linear-gradient(160deg, #003d7a 0%, #005cbf 60%, #0072e5 100%);
+            background: linear-gradient(160deg, #075e54 0%, #128c7e 60%, #25d366 100%);
             min-height: 100vh;
             display: flex;
             align-items: center;
@@ -48,7 +48,7 @@
 
         /* ---- HEADER ---- */
         .card-header {
-            background: linear-gradient(135deg, #003d7a, #005cbf);
+            background: linear-gradient(135deg, #075e54, #128c7e);
             padding: 28px 24px 22px;
             text-align: center;
             position: relative;
@@ -138,8 +138,8 @@
 
         input.field-input:focus,
         select.field-input:focus {
-            border-color: #005cbf;
-            box-shadow: 0 0 0 3px rgba(0,92,191,0.12);
+            border-color: #25d366;
+            box-shadow: 0 0 0 3px rgba(37,211,102,0.15);
             background: #fff;
         }
 
@@ -212,7 +212,7 @@
 
         .card-footer a {
             font-size: 11.5px;
-            color: #005cbf;
+            color: #128c7e;
             text-decoration: none;
             font-weight: 600;
         }
@@ -328,7 +328,10 @@
             </div>
 
             <button type="submit" class="btn-submit" id="submitBtn">
-                <span>🟢</span> Kirim via WhatsApp
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" fill="#fff" style="flex-shrink:0">
+                    <path d="M12.001 2C6.477 2 2 6.477 2 12c0 1.89.525 3.66 1.438 5.168L2 22l4.978-1.421A9.956 9.956 0 0012.001 22C17.523 22 22 17.523 22 12S17.523 2 12.001 2zm0 1.8A8.2 8.2 0 0120.2 12a8.2 8.2 0 01-8.199 8.2 8.168 8.168 0 01-4.2-1.158l-.301-.179-3.122.891.878-3.036-.196-.313A8.164 8.164 0 013.8 12 8.2 8.2 0 0112.001 3.8zm-2.193 4.3c-.198 0-.52.074-.793.37-.272.296-1.04 1.016-1.04 2.479s1.065 2.876 1.213 3.074c.149.198 2.051 3.274 5.063 4.458.708.272 1.26.434 1.69.556.71.202 1.356.174 1.867.105.57-.077 1.754-.717 2.002-1.41.247-.692.247-1.285.173-1.41-.074-.123-.272-.197-.57-.346-.297-.148-1.754-.866-2.026-.964-.273-.099-.47-.148-.669.149-.198.297-.768.964-.941 1.162-.173.198-.347.223-.644.074-.297-.148-1.255-.463-2.39-1.475-.883-.788-1.479-1.761-1.652-2.058-.173-.297-.018-.457.13-.605.133-.133.297-.347.446-.52.149-.174.198-.298.298-.496.099-.198.05-.372-.025-.52-.074-.149-.668-1.612-.916-2.207-.24-.578-.486-.5-.668-.51l-.57-.01z"/>
+                </svg>
+                Kirim via WhatsApp
             </button>
             <p class="micro-note">🔒 Data Anda aman & tidak disalahgunakan</p>
 
@@ -423,9 +426,8 @@
         if (!valid) return;
 
         // Loading state
-        const btn = document.getElementById('submitBtn');
         btn.disabled = true;
-        btn.innerHTML = '<span>⏳</span> Mengirim data...';
+        btn.innerHTML = '⏳ Mengirim data...';
 
         const utmParams = new URLSearchParams(window.location.search);
         const waClean   = cleanWA(waEl.value.trim());
@@ -489,7 +491,7 @@
         document.getElementById('successScreen').style.display = 'block';
 
         btn.disabled = false;
-        btn.innerHTML = '<span>🟢</span> Kirim via WhatsApp';
+        btn.innerHTML = '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" fill="#fff" style="flex-shrink:0"><path d="M12.001 2C6.477 2 2 6.477 2 12c0 1.89.525 3.66 1.438 5.168L2 22l4.978-1.421A9.956 9.956 0 0012.001 22C17.523 22 22 17.523 22 12S17.523 2 12.001 2zm0 1.8A8.2 8.2 0 0120.2 12a8.2 8.2 0 01-8.199 8.2 8.168 8.168 0 01-4.2-1.158l-.301-.179-3.122.891.878-3.036-.196-.313A8.164 8.164 0 013.8 12 8.2 8.2 0 0112.001 3.8zm-2.193 4.3c-.198 0-.52.074-.793.37-.272.296-1.04 1.016-1.04 2.479s1.065 2.876 1.213 3.074c.149.198 2.051 3.274 5.063 4.458.708.272 1.26.434 1.69.556.71.202 1.356.174 1.867.105.57-.077 1.754-.717 2.002-1.41.247-.692.247-1.285.173-1.41-.074-.123-.272-.197-.57-.346-.297-.148-1.754-.866-2.026-.964-.273-.099-.47-.148-.669.149-.198.297-.768.964-.941 1.162-.173.198-.347.223-.644.074-.297-.148-1.255-.463-2.39-1.475-.883-.788-1.479-1.761-1.652-2.058-.173-.297-.018-.457.13-.605.133-.133.297-.347.446-.52.149-.174.198-.298.298-.496.099-.198.05-.372-.025-.52-.074-.149-.668-1.612-.916-2.207-.24-.578-.486-.5-.668-.51l-.57-.01z"/></svg> Kirim via WhatsApp';
     });
 })();
 </script>
