--- a/quick-form.html
+++ b/quick-form.html
@@ -249,12 +249,12 @@
     <!-- HEADER -->
     <div class="card-header">
         <img src="/assets/logo.webp" alt="GadaiBPKBmobil.com" class="logo" onerror="this.style.display='none'">
-        <h1>Cek Estimasi Pencairan<br>BPKB Mobil Anda 🚗</h1>
+        <h1>Hitung Simulasi Gratis<br>BPKB Mobil Anda 🚗</h1>
         <p>Isi 4 data di bawah, tim kami langsung respon!</p>
         <div class="badge-row">
             <span class="badge">⚡ Cair 1x24 Jam</span>
             <span class="badge">🤏 Bunga 0.79%</span>
-            <span class="badge">✅ OJK Terdaftar</span>
+            <span class="badge">✅ Terdaftar OJK</span>
         </div>
     </div>
 
@@ -303,7 +303,7 @@
                     id="kendaraan"
                     name="kendaraan"
                     class="field-input"
-                    placeholder="Contoh: Toyota Avanza 2018"
+                    placeholder="Contoh: Toyota New Avanza 1.3 MT 2018"
                     required
                 >
                 <div class="field-error" id="err-kendaraan">Merk & tahun mobil wajib diisi.</div>
@@ -333,7 +333,7 @@
                 </svg>
                 Kirim via WhatsApp
             </button>
-            <p class="micro-note">🔒 Data Anda aman & tidak disalahgunakan</p>
+            <p class="micro-note">🔒 Data Anda 100% aman & tidak disalahgunakan</p>
 
         </form>
     </div>
