--- a/quick-form.html
+++ b/quick-form.html
@@ -257,7 +257,7 @@
     <!-- HEADER -->
     <div class="card-header">
         <img src="/assets/logo.webp" alt="GadaiBPKBmobil.com" class="logo" onerror="this.style.display='none'">
-        <h1>Cek Estimasi Pencairan<br>BPKB Mobil Anda 🚗</h1>
+        <h1>Hitung Simulasi GRATIS<br>BPKB Mobil Anda 🚗</h1>
         <p>Isi 4 data di bawah, tim kami langsung respon!</p>
         <div class="badge-row">
             <span class="badge">⚡ Cair 1x24 Jam</span>
@@ -311,7 +311,7 @@
                     id="kendaraan"
                     name="kendaraan"
                     class="field-input"
-                    placeholder="Contoh: Toyota Avanza 2018"
+                    placeholder="Contoh: Toyota New Avanza 1.3 MT 2018"
                     required
                 >
                 <div class="field-error" id="err-kendaraan">Merk & tahun mobil wajib diisi.</div>
@@ -341,7 +341,7 @@
                 </svg>
                 Kirim via WhatsApp
             </button>
-            <p class="micro-note">🔒 Data Anda aman & tidak disalahgunakan</p>
+            <p class="micro-note">🔒 Data Anda 100% aman & tidak disalahgunakan</p>
 
         </form>
     </div>
