--- a/quick-form.html
+++ b/quick-form.html
@@ -262,7 +262,7 @@
         <div class="badge-row">
             <span class="badge">⚡ Cair 1x24 Jam</span>
             <span class="badge">🤏 Bunga 0.79%</span>
-            <span class="badge">✅ OJK Terdaftar</span>
+            <span class="badge">✅ Terdaftar OJK</span>
         </div>
     </div>
 
