--- a/quick-form.html
+++ b/quick-form.html
@@ -258,7 +258,7 @@
     <div class="card-header">
         <img src="/assets/logo.webp" alt="GadaiBPKBmobil.com" class="logo" onerror="this.style.display='none'">
         <h1>Hitung Simulasi GRATIS<br>BPKB Mobil Anda 🚗</h1>
-        <p>Isi form di bawah, tim kami langsung respon!</p>
+        <p>Isi form di bawah, fast response 24/7</p>
         <div class="badge-row">
             <span class="badge">⚡ Cair 1x24 Jam</span>
             <span class="badge">🤏 Bunga 0.79%</span>
