--- a/quick-form.html
+++ b/quick-form.html
@@ -257,7 +257,7 @@
     <!-- HEADER -->
     <div class="card-header">
         <img src="/assets/logo.webp" alt="GadaiBPKBmobil.com" class="logo" onerror="this.style.display='none'">
-        <h1>Hitung Simulasi GRATIS<br>BPKB Mobil Anda 🚗</h1>
+        <h1>Hitung Simulasi GRATIS<br>BPKB Mobil Anda 🚗🛻🚛</h1>
         <p>Isi form di bawah, fast response 24/7</p>
         <div class="badge-row">
             <span class="badge">⚡ Cair 1x24 Jam</span>
