--- a/quick-form.html
+++ b/quick-form.html
@@ -262,6 +262,8 @@
         <div class="badge-row">
             <span class="badge">⚡ Cair 1x24 Jam</span>
             <span class="badge">🤏 Bunga 0.79%</span>
+            <span class="badge">🗓️ Tenor Maks 60 Bln</span>
+            <span class="badge">🔄 Bisa Take Over</span>
             <span class="badge">✅ Terdaftar OJK</span>
         </div>
     </div>
