--- a/quick-form.html
+++ b/quick-form.html
@@ -264,7 +264,7 @@
             <span class="badge">🤏 Bunga 0.79%</span>
             <span class="badge">🗓️ Tenor Maks 60 Bln</span>
             <span class="badge">🔄 Bisa Take Over</span>
-            <span class="badge">📍 Seluruh Indonesia</span>
+            <span class="badge">🇮🇩 Seluruh Indonesia</span>
             <span class="badge">✅ Terdaftar OJK</span>
         </div>
     </div>
