--- a/quick-form.html
+++ b/quick-form.html
@@ -81,21 +81,17 @@
         }
 
         .badge-row {
-            display: flex;
-            justify-content: center;
-            gap: 8px;
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            gap: 6px 12px;
             margin-top: 14px;
-            flex-wrap: wrap;
+            text-align: left;
         }
 
         .badge {
-            background: rgba(255,255,255,0.15);
-            border: 1px solid rgba(255,255,255,0.3);
-            color: #fff;
-            font-size: 10.5px;
-            padding: 4px 10px;
-            border-radius: 50px;
-            font-weight: 600;
+            color: rgba(255,255,255,0.9);
+            font-size: 11px;
+            font-weight: 500;
         }
 
         /* ---- BODY ---- */
@@ -257,14 +253,14 @@
     <!-- HEADER -->
     <div class="card-header">
         <img src="/assets/logo.webp" alt="GadaiBPKBmobil.com" class="logo" onerror="this.style.display='none'">
-        <h1>Hitung Simulasi GRATIS<br>BPKB Mobil Anda 🚗🛻🚛</h1>
-        <p>Isi form di bawah, fast response 24/7</p>
+        <h1>Cek Estimasi Pencairan<br>BPKB Mobil Anda 🚗</h1>
+        <p>Isi 4 data di bawah, tim kami langsung respon!</p>
         <div class="badge-row">
-            <span class="badge">⚡ Cair 1x24 Jam</span>
-            <span class="badge">🤏 Bunga 0.79%</span>
-            <span class="badge">🗓️ Tenor Maks 60 Bln</span>
-            <span class="badge">🔄 Bisa Take Over</span>
-            <span class="badge">🇮🇩 Seluruh Indonesia</span>
+            <span class="badge">✅ Cair 1x24 Jam</span>
+            <span class="badge">✅ Mulai 0.79%</span>
+            <span class="badge">✅ Tenor Maks 60 Bln</span>
+            <span class="badge">✅ Bisa Take Over</span>
+            <span class="badge">✅ Seluruh Indonesia</span>
             <span class="badge">✅ Terdaftar OJK</span>
         </div>
     </div>
@@ -314,7 +310,7 @@
                     id="kendaraan"
                     name="kendaraan"
                     class="field-input"
-                    placeholder="Contoh: Toyota New Avanza 1.3 MT 2018"
+                    placeholder="Contoh: Toyota Avanza 2018"
                     required
                 >
                 <div class="field-error" id="err-kendaraan">Merk & tahun mobil wajib diisi.</div>
@@ -344,7 +340,7 @@
                 </svg>
                 Kirim via WhatsApp
             </button>
-            <p class="micro-note">🔒 Data Anda 100% aman & tidak disalahgunakan</p>
+            <p class="micro-note">🔒 Data Anda aman & tidak disalahgunakan</p>
 
         </form>
     </div>
