--- a/quick-form.html
+++ b/quick-form.html
@@ -463,9 +463,9 @@
             // ⚠️ token TIDAK dikirim dari browser — ditambahkan di server (Netlify Function)
         };
 
-        // Kirim ke Netlify Function (proxy) — bukan langsung ke Google Sheet
+        // Kirim ke Vercel API (proxy aman — token ada di server)
         try {
-            await fetch('/.netlify/functions/submit', {
+            await fetch('/api/submit', {
                 method:  'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body:    JSON.stringify(leadData)
