--- a/quick-form.html
+++ b/quick-form.html
@@ -6,6 +6,7 @@
     <title>Ajukan Sekarang | GadaiBPKBmobil.com</title>
     <meta name="description" content="Ajukan pinjaman BPKB mobil cepat. Isi form singkat 30 detik, langsung diproses!">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
+    <link rel="preconnect" href="https://wa.me">
 
     <!-- Meta Pixel Code -->
     <script>
