--- a/quick-form.html
+++ b/quick-form.html
@@ -6,7 +6,15 @@
     <title>Ajukan Sekarang | GadaiBPKBmobil.com</title>
     <meta name="description" content="Ajukan pinjaman BPKB mobil cepat. Isi form singkat 30 detik, langsung diproses!">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
+    
+    <!-- Preconnect: buat koneksi awal ke WA -->
     <link rel="preconnect" href="https://wa.me">
+    <link rel="preconnect" href="https://api.whatsapp.com">
+
+    <!-- DNS Prefetch: resolusi DNS lebih awal -->
+    <link rel="dns-prefetch" href="//wa.me">
+    <link rel="dns-prefetch" href="//api.whatsapp.com">
+    <link rel="dns-prefetch" href="//web.whatsapp.com">
 
     <!-- Meta Pixel Code -->
     <script>
