--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <meta name="theme-color" content="#004990">
     
     <link rel="preconnect" href="https://wa.me">
+    <link rel="preconnect" href="https://api.whatsapp.com">
+    <link rel="dns-prefetch" href="//wa.me">
+    <link rel="dns-prefetch" href="//api.whatsapp.com">
+    <link rel="dns-prefetch" href="//web.whatsapp.com">
+    
     <link rel="stylesheet" href="css/styles.css?v=1.7.1">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
