--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://gadaibpkbmobil.com/">
     <meta name="theme-color" content="#004990">
+    <meta name="facebook-domain-verification" content="kt7vd9b72azjb6133hvmn3exqbe49z" />
     
     <link rel="preconnect" href="https://wa.me">
     <link rel="preconnect" href="https://api.whatsapp.com">
@@ -19,7 +20,7 @@
     <link rel="dns-prefetch" href="//api.whatsapp.com">
     <link rel="dns-prefetch" href="//web.whatsapp.com">
     
-    <link rel="stylesheet" href="css/styles.css?v=1.7.2">
+    <link rel="stylesheet" href="css/styles.css?v=1.7.3">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
