--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ src="https://www.facebook.com/tr?id=4245537439028534&ev=PageView&noscript=1"
                             <ul class="check-list">
                                 <li>Angsuran lebih terjangkau tenor lebih panjang</li>
                                 <li>Harga wajar berdasarkan pasar</li>
-                                <li>Tim profesional</li>
+                                <li>Cair 1 x 24 jam</li>
                                 <li>Proses aman dan transparan</li>
                             </ul>
                             <!-- Insurance Icons - Emojis -->
@@ -384,7 +384,7 @@ src="https://www.facebook.com/tr?id=4245537439028534&ev=PageView&noscript=1"
                             <ul class="check-list">
                                 <li>Angsuran lebih terjangkau tenor lebih panjang</li>
                                 <li>Harga wajar berdasarkan pasar</li>
-                                <li>Tim profesional</li>
+                                <li>Cair 1 x 24 jam</li>
                                 <li>Proses aman dan transparan</li>
                             </ul>
                             <!-- Insurance Icons - Emojis -->
@@ -430,7 +430,7 @@ src="https://www.facebook.com/tr?id=4245537439028534&ev=PageView&noscript=1"
                             <ul class="check-list">
                                 <li>Angsuran lebih terjangkau tenor lebih panjang</li>
                                 <li>Harga wajar berdasarkan pasar</li>
-                                <li>Tim profesional</li>
+                                <li>Cair 1 x 24 jam</li>
                                 <li>Proses aman dan transparan</li>
                             </ul>
                             <!-- Insurance Icons - Emojis -->
@@ -476,7 +476,7 @@ src="https://www.facebook.com/tr?id=4245537439028534&ev=PageView&noscript=1"
                             <ul class="check-list">
                                 <li>Angsuran lebih terjangkau tenor lebih panjang</li>
                                 <li>Harga wajar berdasarkan pasar</li>
-                                <li>Tim profesional</li>
+                                <li>Cair 1 x 24 jam</li>
                                 <li>Proses aman dan transparan</li>
                             </ul>
                             <!-- Insurance Icons - Emojis -->
