--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="dns-prefetch" href="//api.whatsapp.com">
     <link rel="dns-prefetch" href="//web.whatsapp.com">
     
-    <link rel="stylesheet" href="css/styles.css?v=1.7.3">
+    <link rel="stylesheet" href="css/styles.css?v=1.7.4">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
@@ -122,7 +122,7 @@ src="https://www.facebook.com/tr?id=4245537439028534&ev=PageView&noscript=1"
             </div>
             <div class="stat-item">
                 <i>⏳</i>
-                <span>Tenor Hingga<br><strong>48 Bulan</strong></span>
+                <span>Tenor Hingga<br><strong>60 bulan</strong></span>
             </div>
         </div>
 
@@ -529,7 +529,7 @@ src="https://www.facebook.com/tr?id=4245537439028534&ev=PageView&noscript=1"
             <div class="benefit-item">
                 <div class="benefit-icon">📅</div>
                 <div class="benefit-title">Tenor Fleksibel s.d.</div>
-                <div class="benefit-desc">48 bulan dan bisa topup</div>
+                <div class="benefit-desc">60 bulan dan bisa topup</div>
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">🛡️</div>
