--- a/index.html
+++ b/index.html
@@ -810,7 +810,8 @@ src="https://www.facebook.com/tr?id=4245537439028534&ev=PageView&noscript=1"
     🔢 Hitung Simulasi
   </a>
   <a href="https://wa.me/6285283428701" class="btn-bottom btn-wa wa-radar" target="_blank">
-    🟢 WhatsApp
+    <img src="/whatsapp.svg" alt="WhatsApp" width="20" height="20" style="vertical-align:middle; margin-right:5px;">
+    WhatsApp
   </a>
 </div>
 
