--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="dns-prefetch" href="//api.whatsapp.com">
     <link rel="dns-prefetch" href="//web.whatsapp.com">
     
-    <link rel="stylesheet" href="css/styles.css?v=1.7.5">
+    <link rel="stylesheet" href="css/styles.css?v=1.7.6">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
@@ -810,7 +810,7 @@ src="https://www.facebook.com/tr?id=4245537439028534&ev=PageView&noscript=1"
     🔢 Hitung Simulasi
   </a>
   <a href="https://wa.me/6285283428701" class="btn-bottom btn-wa wa-radar" target="_blank">
-    <img src="/whatsapp.svg" alt="WhatsApp" width="20" height="20" style="vertical-align:middle; margin-right:5px;">
+    <img src="/assets/whatsapp.svg" alt="WhatsApp" width="20" height="20" style="vertical-align:middle; margin-right:5px;">
     WhatsApp
   </a>
 </div>
