--- a/index.html
+++ b/index.html
@@ -783,8 +783,8 @@ src="https://www.facebook.com/tr?id=4245537439028534&ev=PageView&noscript=1"
     <div class="footer-logos">
         <!-- Kotak 1: OJK + APPI -->
         <div class="footer-logo-box">
-            <img src="/assets/logo-ojk.webp" alt="OJK" onerror="this.style.opacity='0.3'">
-            <img src="/assets/logo-appi.webp" alt="APPI" onerror="this.style.opacity='0.3'">
+            <img src="/assets/ojk.webp" alt="OJK" onerror="this.style.opacity='0.3'">
+            <img src="/assets/appi.webp" alt="APPI" onerror="this.style.opacity='0.3'">
         </div>
         <!-- Kotak 2: Logo Pembiayaan -->
         <div class="footer-logo-box">
