--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="dns-prefetch" href="//api.whatsapp.com">
     <link rel="dns-prefetch" href="//web.whatsapp.com">
     
-    <link rel="stylesheet" href="css/styles.css?v=1.7.7">
+    <link rel="stylesheet" href="css/styles.css?v=1.7.8">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
@@ -781,14 +781,9 @@ src="https://www.facebook.com/tr?id=4245537439028534&ev=PageView&noscript=1"
     <footer>
     <!-- LOGO LEMBAGA -->
     <div class="footer-logos">
-        <!-- Kotak 1: OJK + APPI -->
-        <div class="footer-logo-box">
-            <img src="/assets/ojk.webp" alt="OJK" onerror="this.style.opacity='0.3'">
-            <img src="/assets/appi.webp" alt="APPI" onerror="this.style.opacity='0.3'">
-        </div>
         <!-- Kotak 2: Logo Pembiayaan -->
         <div class="footer-logo-box">
-            <img src="/assets/logo-pembiayaan.webp" alt="Lembaga Pembiayaan" onerror="this.style.opacity='0.3'">
+            <img src="/assets/leasing.webp" alt="Lembaga Pembiayaan" onerror="this.style.opacity='0.3'">
         </div>
     </div>
 
