--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="dns-prefetch" href="//api.whatsapp.com">
     <link rel="dns-prefetch" href="//web.whatsapp.com">
     
-    <link rel="stylesheet" href="css/styles.css?v=1.7.9">
+    <link rel="stylesheet" href="css/styles.css?v=1.8.0">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
@@ -838,9 +838,9 @@ src="https://www.facebook.com/tr?id=4245537439028534&ev=PageView&noscript=1"
     </div>
 
     <div style="margin-top: 30px; display: flex; align-items: center; gap: 10px;">
-        <img src="/assets/logo.webp" alt="GadaiBPKBmobil.com" style="width:30px; height:30px; border-radius:50%; object-fit:cover;">
-        <p style="font-size: 10px;">BPKB Jadi Uang, Mobil Tetap Bisa Jalan</p>
-    </div>
+    <img src="/assets/logo.webp" alt="Logo" style="width:30px; height:30px; border-radius:50%; object-fit:contain;">
+    <p style="font-size: 10px;">BPKB Jadi Uang, Mobil Tetap Bisa Jalan</p>
+</div>
 
     <p style="margin-top: 30px; text-align: center; font-size: 10px; opacity: 0.7;">&copy; 2026 Copyright GadaiBPKBmobil.com</p>
 </footer>
