--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@ src="https://www.facebook.com/tr?id=4245537439028534&ev=PageView&noscript=1"
     </div>
 
     <div style="margin-top: 30px; display: flex; align-items: center; gap: 10px;">
-    <img src="/assets/logo.webp" alt="Logo" style="width:30px; height:30px; border-radius:50%; object-fit:contain;">
+    <img src="/assets/logo.webp" alt="Logo" style="width:80px; height:auto; object-fit:contain;">
     <p style="font-size: 10px;">BPKB Jadi Uang, Mobil Tetap Bisa Jalan</p>
 </div>
 
