--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="dns-prefetch" href="//api.whatsapp.com">
     <link rel="dns-prefetch" href="//web.whatsapp.com">
     
-    <link rel="stylesheet" href="css/styles.css?v=1.8.0">
+    <link rel="stylesheet" href="css/styles.css?v=1.8.1">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
@@ -197,15 +197,15 @@ src="https://www.facebook.com/tr?id=4245537439028534&ev=PageView&noscript=1"
                         <div class="partner-marquee-container">
                             <div class="partner-marquee">
                                 <div class="partner-item">🏢 Adira Finance</div>
-                                <div class="partner-item">🏢 BCA Finance</div>
-                                <div class="partner-item">🏢 Mandiri Tunas Finance</div>
+                                <div class="partner-item">🏢 BFI Finance</div>
+                                <div class="partner-item">🏢 TAF Finance</div>
                                 <div class="partner-item">🏢 BFI Finance</div>
                                 <div class="partner-item">🏢 Mega Auto Finance</div>
                                 <div class="partner-item">🏢 WOM Finance</div>
                                 <!-- Duplicate for seamless loop -->
                                 <div class="partner-item">🏢 Adira Finance</div>
-                                <div class="partner-item">🏢 BCA Finance</div>
-                                <div class="partner-item">🏢 Mandiri Tunas Finance</div>
+                                <div class="partner-item">🏢 BFI Finance</div>
+                                <div class="partner-item">🏢 TAF Finance</div>
                                 <div class="partner-item">🏢 BFI Finance</div>
                                 <div class="partner-item">🏢 Mega Auto Finance</div>
                                 <div class="partner-item">🏢 WOM Finance</div>
@@ -227,15 +227,15 @@ src="https://www.facebook.com/tr?id=4245537439028534&ev=PageView&noscript=1"
                         <div class="partner-marquee-container">
                             <div class="partner-marquee">
                                 <div class="partner-item">🏢 Adira Finance</div>
-                                <div class="partner-item">🏢 BCA Finance</div>
-                                <div class="partner-item">🏢 Mandiri Tunas Finance</div>
+                                <div class="partner-item">🏢 BFI Finance</div>
+                                <div class="partner-item">🏢 TAF Finance</div>
                                 <div class="partner-item">🏢 BFI Finance</div>
                                 <div class="partner-item">🏢 Mega Auto Finance</div>
                                 <div class="partner-item">🏢 WOM Finance</div>
                                 <!-- Duplicate for seamless loop -->
                                 <div class="partner-item">🏢 Adira Finance</div>
-                                <div class="partner-item">🏢 BCA Finance</div>
-                                <div class="partner-item">🏢 Mandiri Tunas Finance</div>
+                                <div class="partner-item">🏢 BFI Finance</div>
+                                <div class="partner-item">🏢 TAF Finance</div>
                                 <div class="partner-item">🏢 BFI Finance</div>
                                 <div class="partner-item">🏢 Mega Auto Finance</div>
                                 <div class="partner-item">🏢 WOM Finance</div>
@@ -257,15 +257,15 @@ src="https://www.facebook.com/tr?id=4245537439028534&ev=PageView&noscript=1"
                         <div class="partner-marquee-container">
                             <div class="partner-marquee">
                                 <div class="partner-item">🏢 Adira Finance</div>
-                                <div class="partner-item">🏢 BCA Finance</div>
-                                <div class="partner-item">🏢 Mandiri Tunas Finance</div>
+                                <div class="partner-item">🏢 BFI Finance</div>
+                                <div class="partner-item">🏢 TAF Finance</div>
                                 <div class="partner-item">🏢 BFI Finance</div>
                                 <div class="partner-item">🏢 Mega Auto Finance</div>
                                 <div class="partner-item">🏢 WOM Finance</div>
                                 <!-- Duplicate for seamless loop -->
                                 <div class="partner-item">🏢 Adira Finance</div>
-                                <div class="partner-item">🏢 BCA Finance</div>
-                                <div class="partner-item">🏢 Mandiri Tunas Finance</div>
+                                <div class="partner-item">🏢 BFI Finance</div>
+                                <div class="partner-item">🏢 TAF Finance</div>
                                 <div class="partner-item">🏢 BFI Finance</div>
                                 <div class="partner-item">🏢 Mega Auto Finance</div>
                                 <div class="partner-item">🏢 WOM Finance</div>
@@ -287,15 +287,15 @@ src="https://www.facebook.com/tr?id=4245537439028534&ev=PageView&noscript=1"
                         <div class="partner-marquee-container">
                             <div class="partner-marquee">
                                 <div class="partner-item">🏢 Adira Finance</div>
-                                <div class="partner-item">🏢 BCA Finance</div>
-                                <div class="partner-item">🏢 Mandiri Tunas Finance</div>
+                                <div class="partner-item">🏢 BFI Finance</div>
+                                <div class="partner-item">🏢 TAF Finance</div>
                                 <div class="partner-item">🏢 BFI Finance</div>
                                 <div class="partner-item">🏢 Mega Auto Finance</div>
                                 <div class="partner-item">🏢 WOM Finance</div>
                                 <!-- Duplicate for seamless loop -->
                                 <div class="partner-item">🏢 Adira Finance</div>
-                                <div class="partner-item">🏢 BCA Finance</div>
-                                <div class="partner-item">🏢 Mandiri Tunas Finance</div>
+                                <div class="partner-item">🏢 BFI Finance</div>
+                                <div class="partner-item">🏢 TAF Finance</div>
                                 <div class="partner-item">🏢 BFI Finance</div>
                                 <div class="partner-item">🏢 Mega Auto Finance</div>
                                 <div class="partner-item">🏢 WOM Finance</div>
